--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "mongoose": "^6.3.4",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
-    "rxjs": "^6.3.3"
+    "rxjs": "^7.5.5"
   },
   "devDependencies": {
     "@nestjs/testing": "^6.0.0",
@@ -44,7 +44,7 @@
     "ts-node": "8.1.0",
     "tsconfig-paths": "3.8.0",
     "tslint": "5.16.0",
-    "typescript": "3.4.3",
+    "typescript": "^3.4.3",
     "wait-on": "^3.2.0"
   },
   "jest": {
